// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declared-tickets-list Renders \`declared-tickets-list\` with parant alarm id 1`] = `
<div
  class="c-advanced-data-table"
  disable-initial-sort=""
>
  <div
    class="layout wrap"
  >
    <!---->
    <!---->
  </div>
  <div
    class="v-data-table theme--light"
    header-text="text"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label="Ticket URL: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket_url"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Ticket URL
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Ticket ID: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Ticket ID
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="System name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket_system_name"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  System name
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Rule name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket_rule_name"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Rule name
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Date: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="t"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Date
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Status: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="_t"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Status
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Meta alarm: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="metaalarm"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Meta alarm
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Author: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="a"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Author
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Comment: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket_comment"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Comment
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="v-data-table__empty-wrapper"
          >
            <td
              colspan="9"
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <!---->
</div>
`;

exports[`declared-tickets-list Renders \`declared-tickets-list\` with tickets 1`] = `
<div
  class="c-advanced-data-table"
  disable-initial-sort=""
>
  <div
    class="layout wrap"
  >
    <!---->
    <!---->
  </div>
  <div
    class="v-data-table theme--light"
    header-text="text"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label="Ticket URL: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket_url"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Ticket URL
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Ticket ID: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Ticket ID
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="System name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket_system_name"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  System name
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Rule name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket_rule_name"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Rule name
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Date: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="t"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Date
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Status: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="_t"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Status
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Author: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="a"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Author
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Comment: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket_comment"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Comment
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <a
                href="https://ticket-url.com/0"
                target="_blank"
              >
                https://ticket-url.com/0
              </a>
            </td>
            <td
              class="text-start"
            >
        ticket-0
            </td>
            <td
              class="text-start"
            >
        ticket-system-name-0
            </td>
            <td
              class="text-start"
            >
        ticket-rule-name-0
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:48
            </td>
            <td
              class="text-start"
            >
              <c-help-icon-stub
                color="primary"
                icon="check_circle"
                maxwidth="400"
                top=""
              />
            </td>
            <td
              class="text-start"
            >
        author-0
            </td>
            <td
              class="text-start"
            >
        ticket-comment-0
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <span>
                ticket-url-1
              </span>
            </td>
            <td
              class="text-start"
            >
        ticket-1
            </td>
            <td
              class="text-start"
            >
        ticket-system-name-1
            </td>
            <td
              class="text-start"
            >
        ticket-rule-name-1
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:49
            </td>
            <td
              class="text-start"
            >
              <c-help-icon-stub
                color="error"
                icon="error"
                maxwidth="400"
                top=""
              />
            </td>
            <td
              class="text-start"
            >
        author-1
            </td>
            <td
              class="text-start"
            >
        ticket-comment-1
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <a
                href="https://ticket-url.com/2"
                target="_blank"
              >
                https://ticket-url.com/2
              </a>
            </td>
            <td
              class="text-start"
            >
        ticket-2
            </td>
            <td
              class="text-start"
            >
        ticket-system-name-2
            </td>
            <td
              class="text-start"
            >
        ticket-rule-name-2
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:50
            </td>
            <td
              class="text-start"
            >
              <c-help-icon-stub
                color="primary"
                icon="check_circle"
                maxwidth="400"
                top=""
              />
            </td>
            <td
              class="text-start"
            >
        author-2
            </td>
            <td
              class="text-start"
            >
        ticket-comment-2
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <span>
                ticket-url-3
              </span>
            </td>
            <td
              class="text-start"
            >
        ticket-3
            </td>
            <td
              class="text-start"
            >
        ticket-system-name-3
            </td>
            <td
              class="text-start"
            >
        ticket-rule-name-3
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:51
            </td>
            <td
              class="text-start"
            >
              <c-help-icon-stub
                color="error"
                icon="error"
                maxwidth="400"
                top=""
              />
            </td>
            <td
              class="text-start"
            >
        author-3
            </td>
            <td
              class="text-start"
            >
        ticket-comment-3
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <a
                href="https://ticket-url.com/4"
                target="_blank"
              >
                https://ticket-url.com/4
              </a>
            </td>
            <td
              class="text-start"
            >
        ticket-4
            </td>
            <td
              class="text-start"
            >
        ticket-system-name-4
            </td>
            <td
              class="text-start"
            >
        ticket-rule-name-4
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:52
            </td>
            <td
              class="text-start"
            >
              <c-help-icon-stub
                color="primary"
                icon="check_circle"
                maxwidth="400"
                top=""
              />
            </td>
            <td
              class="text-start"
            >
        author-4
            </td>
            <td
              class="text-start"
            >
        ticket-comment-4
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <span>
                ticket-url-5
              </span>
            </td>
            <td
              class="text-start"
            >
        ticket-5
            </td>
            <td
              class="text-start"
            >
        ticket-system-name-5
            </td>
            <td
              class="text-start"
            >
        ticket-rule-name-5
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:53
            </td>
            <td
              class="text-start"
            >
              <c-help-icon-stub
                color="error"
                icon="error"
                maxwidth="400"
                top=""
              />
            </td>
            <td
              class="text-start"
            >
        author-5
            </td>
            <td
              class="text-start"
            >
        ticket-comment-5
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <a
                href="https://ticket-url.com/6"
                target="_blank"
              >
                https://ticket-url.com/6
              </a>
            </td>
            <td
              class="text-start"
            >
        ticket-6
            </td>
            <td
              class="text-start"
            >
        ticket-system-name-6
            </td>
            <td
              class="text-start"
            >
        ticket-rule-name-6
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:54
            </td>
            <td
              class="text-start"
            >
              <c-help-icon-stub
                color="primary"
                icon="check_circle"
                maxwidth="400"
                top=""
              />
            </td>
            <td
              class="text-start"
            >
        author-6
            </td>
            <td
              class="text-start"
            >
        ticket-comment-6
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <span>
                ticket-url-7
              </span>
            </td>
            <td
              class="text-start"
            >
        ticket-7
            </td>
            <td
              class="text-start"
            >
        ticket-system-name-7
            </td>
            <td
              class="text-start"
            >
        ticket-rule-name-7
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:55
            </td>
            <td
              class="text-start"
            >
              <c-help-icon-stub
                color="error"
                icon="error"
                maxwidth="400"
                top=""
              />
            </td>
            <td
              class="text-start"
            >
        author-7
            </td>
            <td
              class="text-start"
            >
        ticket-comment-7
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <a
                href="https://ticket-url.com/8"
                target="_blank"
              >
                https://ticket-url.com/8
              </a>
            </td>
            <td
              class="text-start"
            >
        ticket-8
            </td>
            <td
              class="text-start"
            >
        ticket-system-name-8
            </td>
            <td
              class="text-start"
            >
        ticket-rule-name-8
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:56
            </td>
            <td
              class="text-start"
            >
              <c-help-icon-stub
                color="primary"
                icon="check_circle"
                maxwidth="400"
                top=""
              />
            </td>
            <td
              class="text-start"
            >
        author-8
            </td>
            <td
              class="text-start"
            >
        ticket-comment-8
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="text-start"
            >
              <span>
                ticket-url-9
              </span>
            </td>
            <td
              class="text-start"
            >
        ticket-9
            </td>
            <td
              class="text-start"
            >
        ticket-system-name-9
            </td>
            <td
              class="text-start"
            >
        ticket-rule-name-9
            </td>
            <td
              class="text-start"
            >
    04/03/2021 13:44:57
            </td>
            <td
              class="text-start"
            >
              <c-help-icon-stub
                color="error"
                icon="error"
                maxwidth="400"
                top=""
              />
            </td>
            <td
              class="text-start"
            >
        author-9
            </td>
            <td
              class="text-start"
            >
        ticket-comment-9
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <!---->
</div>
`;

exports[`declared-tickets-list Renders \`declared-tickets-list\` without tickets 1`] = `
<div
  class="c-advanced-data-table"
  disable-initial-sort=""
>
  <div
    class="layout wrap"
  >
    <!---->
    <!---->
  </div>
  <div
    class="v-data-table theme--light"
    header-text="text"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label="Ticket URL: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket_url"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Ticket URL
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Ticket ID: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Ticket ID
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="System name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket_system_name"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  System name
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Rule name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket_rule_name"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Rule name
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Date: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="t"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Date
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Status: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="_t"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Status
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Author: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="a"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Author
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
            <th
              aria-label="Comment: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="text-start sortable"
              data-value="ticket_comment"
              role="columnheader"
              scope="col"
            >
              <div
                class="layout"
              >
                <span
                  class=""
                >
                  Comment
                </span>
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-data-table-header__icon material-icons theme--light"
                  style="font-size: 18px;"
                >
                  arrow_upward
                </i>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="v-data-table__empty-wrapper"
          >
            <td
              colspan="8"
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <!---->
</div>
`;
